--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "summarium",
+  "name": "sommaire",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
+    "@langchain/community": "^0.3.45",
+    "@langchain/core": "^0.3.57",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
     "@uploadthing/react": "^7.3.1",
@@ -18,6 +20,7 @@
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
