--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@langchain/core": "^0.3.57",
     "@neondatabase/serverless": "^1.0.1",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tabler/icons-react": "^3.34.0",
     "@uploadthing/react": "^7.3.1",
